# sdl2_opengl_engine

./: CMakeCache.txt  CMakeLists.txt  Game.cpp  Game.hpp  Makefile  README.md  cmake_install.cmake  fragmentShader.frag  main.cpp  project  untitled.frag  vertexShader.vert
engine/components/: BoundBox.hpp  Component.hpp  Position.hpp  SoundComp.hpp  TextureComp.hpp  Transform.hpp
engine/core/: Camera.cpp  Camera.hpp  ComponentManager.hpp  DataTypes.hpp  Engine.cpp  Engine.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Utils.cpp  Utils.hpp
engine/rendering/: GLDebugUtils.hpp  IndexBuffer.cpp  IndexBuffer.hpp  RenderingManager.cpp  RenderingManager.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
objects/: Ball.cpp  Ball.hpp  Enemy.cpp  Enemy.hpp  GameObject.cpp  GameObject.hpp  Player.cpp  Player.hpp
